update component segmentation

--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -23,6 +23,7 @@
     }
     
   .carousel-inner img {
+      height: 10%;
       width: 100%; /* Set width to 100% */
       margin: auto;
       min-height:200px;
@@ -34,3 +35,4 @@
       display: none; 
     }
   }
+  
