--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+
+<app-navbar></app-navbar>
 <app-body></app-body>
+<app-about></app-about>
+<app-footer></app-footer>
 
 <!-- <router-outlet></router-outlet> -->
