--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,13 +9,17 @@
             <img src="../../assets/img/potentialApp.jpg" class="img-responsive" style="width:100%" alt="Image">
             <p>Project 2</p>    
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4"> 
+                <img src="../../assets/img/codeColor.jpg" class="img-responsive" style="width:100%" alt="Image">
+                <p>Project 3</p>    
+              </div>
+          <!-- <div class="col-sm-4">
             <div class="well">
              <p>Some text..</p>
             </div>
             <div class="well">
              <p>Some text..</p>
             </div>
-          </div>
+          </div> -->
         </div>
     </div>
