--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-navbar></app-navbar>
 <app-body></app-body>
 <app-about></app-about>
+<app-contact></app-contact>
 <app-footer></app-footer>
 
 <!-- <router-outlet></router-outlet> -->
