update noodemailer service

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -13,7 +13,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../../assets/img/professional.jpg" alt="Image">
+        <img src="../../assets/img/business.jpg" alt="Image">
         <div class="carousel-caption">
           <h3>Sell $</h3>
           <p>Money Money.</p>
@@ -23,8 +23,8 @@
       <div class="item">
           <img src="../../assets/img/tech.jpg" alt="Image">
           <div class="carousel-caption">
-            <h3>More Sell $</h3>
-            <p>Lorem ipsum...</p>
+            <h3>Sell $</h3>
+            <p>Money Money.</p>
           </div>      
         </div>
 
@@ -32,7 +32,7 @@
         <img src="../../assets/img/happyDiner.jpg" alt="Image">
         <div class="carousel-caption">
           <h3>More Sell $</h3>
-          <p>Lorem ipsum...</p>
+          <p>Money Money.</p>
         </div>      
       </div>
 
